--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,24 @@
 on:
-  # push:
-  #   branches:
-  #   - main
+  push:
+    branches:
+    - main
   workflow_dispatch:
 
 jobs:
-  changes:
-    name: test changed-files
+  upload_files:
     runs-on: ubuntu-latest
+    name: Upload a builded file.
     steps:
-    - name: checkout
-      uses: actions/checkout@v3
-
-    - name: Copy via ssh
-      uses: garygrossgarten/github-action-scp@v0.8.0
+    - name: Checkout
+      uses: actions/checkout@v2.3.4
+    - name: Upload Files
+      id: upload
+      uses: Creepios/sftp-action@v1.0.3
       with:
-        local: git-plugin
-        remote: ${{ secrets.DESTINATION }}
-        host: gate.cloudjiffy.com
-        username: 180022-3496
+        host: 'gate.cloudjiffy.com'
         port: 3022
-        privateKey: ${{ secrets.SSH_PRIVATE_KEY }}
+        username: '180022-3496'
+        privateKey: ${{ secrets.SSH_KEY }}
+        localPath: '/home/runner/work/git-plugin/git-plugin'
+        remotePath: ${{ secrets.DESTINATION }}
           
