--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,20 +5,18 @@ on:
   workflow_dispatch:
 
 jobs:
-  upload_files:
+  deploy:
     runs-on: ubuntu-latest
-    name: Upload a builded file.
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2.3.4
-    - name: Upload Files
-      id: upload
-      uses: Creepios/sftp-action@v1.0.3
+    - uses: actions/checkout@v3
+    - name: rsync deployments
+      uses: burnett01/rsync-deployments@6.0.0
       with:
-        host: 'gate.cloudjiffy.com'
-        port: 3022
-        username: '180022-3496'
-        privateKey: ${{ secrets.SSH_KEY }}
-        localPath: '/home/runner/work/git-plugin/git-plugin/'
-        remotePath: '/var/www/webroot/ROOT/wp-content/plugins/git-plugin/'
-          
+        switches: -avzr --delete --exclude=".git" --include="" --filter=""
+        path: .
+        remote_path: ${{ secrets.DESTINATION }}
+        remote_host: gate.cloudjiffy.com
+        remote_port: 3022
+        remote_user: '180022-3496'
+        remote_key: ${{ secrets.SSH_KEY }}
+
